# feature-learning-parity-task

./: .gitignore  MOTIVATION.md  README.md  parity_kernel_regression.ipynb  pyproject.toml
notebooks/: clamp.ipynb  colab_alpha_width_grid_sgd.ipynb  colab_parity_experiment.ipynb  colab_width_scaling_sgd.ipynb  colab_width_scaling_sgd_exclude_d8_d16.ipynb
parity_net/: __init__.py  analysis.py  checkpoint.py  config.py  data.py  default_config.yaml  model.py  train.py
